[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/UI/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Styles/Main.tres" type="Theme" id=2]
[ext_resource path="res://Styles/LabelFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Hardpixel.otf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ) ]
}

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 508.0
margin_bottom = 299.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = -97.0
margin_right = 105.0
margin_bottom = 97.0
theme = ExtResource( 2 )

[node name="Buttons" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -69.0
margin_right = 89.0
margin_bottom = 69.0
custom_constants/separation = 16

[node name="NewGame" type="Button" parent="Panel/Buttons"]
margin_right = 178.0
margin_bottom = 35.0
size_flags_vertical = 3
text = "New game"

[node name="Settings" type="Button" parent="Panel/Buttons"]
margin_top = 51.0
margin_right = 178.0
margin_bottom = 86.0
size_flags_vertical = 3
text = "Settings"

[node name="Quit" type="Button" parent="Panel/Buttons"]
margin_top = 102.0
margin_right = 178.0
margin_bottom = 138.0
size_flags_vertical = 3
text = "Quit"

[node name="GameName" type="Label" parent="."]
margin_top = 90.0
margin_right = 1024.0
margin_bottom = 117.0
custom_fonts/font = ExtResource( 3 )
text = "Heroic"
align = 1

[node name="Quote" type="Label" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -152.0
margin_right = 135.0
margin_bottom = -116.0
rect_rotation = -45.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true

[node name="Animation" type="AnimationPlayer" parent="Quote"]
anims/zoom = SubResource( 2 )
[connection signal="pressed" from="Panel/Buttons/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Panel/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Panel/Buttons/Quit" to="." method="_on_Quit_pressed"]
